build: Add requirements.txt and update .gitignore to exclude common Python and Django development files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,30 @@
+# Django
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+media/
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+.venv/
+venv/
+ENV/
+env/
+*.swp
+*.bak
+
+# Environment variables
 .env
+
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
